--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,6 +14,7 @@
 @use 'layouts/contact.scss';
 @use 'layouts/project.scss';
 @use 'layouts/projects.scss';
+@use 'layouts/profile-links.scss';
 
 /* Components */
 @use 'components/site-header.scss';
