--- a/src/assets/scss/layouts/profile-links.scss
+++ b/src/assets/scss/layouts/profile-links.scss
@@ -19,4 +19,10 @@
         text-decoration: none;
         border: 0;
     }
+
+    :root[data-theme="dark"] & { 
+        img {
+            filter: invert(100%);
+        }
+    }
 }
